# connect-four-ai-play

./: LICENSE  README.md
.github/workflows/: node.yaml  node.yml  publish.yml  rust.yml
wasm-game-ai/: Cargo.toml
wasm-game-ai/src/: lib.rs  state.rs
web/: .eslintrc.cjs  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
