[package]
name = "game-ai"
version = "0.0.0"
authors = ["ia7ck <23146842+ia7ck@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
web-sys = { version = "0.3.64", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

thunder-book-game-search = { git = "https://github.com/ia7ck/thunder-book-game-search.git", rev = "41c93a43" }
# https://docs.rs/getrandom/latest/getrandom/index.html#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
